--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 											<div class="content">
 												<h3>Linguagens de Programação</h3>
 												<ul>
-													<li>Python com foco em análise de dados;</li>
+													<li>Python com foco em Análise de Dados;</li>
 													<li>Pensamento Estratégico;</li>
+													<li>SQL Language;</li>
 													<li>Conceitos de ETL.</li>													
 												</ul>
 											</div>
