--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 												<h3>Engenharia de Software</h3>
 												<ul>
 													<li>Github;</li>
-													<li>SQLite3 Database.</li>
+													<li>SQLite3 Database;</li>
 													<li>Streamlit Cloud.</li>
 												</ul>
 											</div>
