--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 												<ul>
 													<li>Github;</li>
 													<li>SQLite3 Database;</li>
+													<li>WSL;</li>
+													<li>Linux;</li>
 													<li>Streamlit Cloud.</li>
 												</ul>
 											</div>
