--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
 													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade);</li>
-													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank";</li>
-													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade;</li>
+													<li>Algoritmos de regressão, classificação e clusterização;</li>
+													<li>Métricas de Performance ( RMSE, MSE, MAE, MAPE, Confusion Matrix,
+													Precision, Recall, ROC Curve, Silhouette Score e R2 );</li>																				
 													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Confusion Matrix,
 														Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index);</li>
-													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>
+													<li>Pacotes de Machine Learning: Sklearn.</li>
 												</ul>
 											</div>
 										</article>
