--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 														<li>Métricas de performance: Silhouette Score.</li>														
 													</ul>											
 												<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>										
 									</div>
