--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Nesse projeto, foram explorados os principais conceitos do treinamento,
 											ajuste de parâmetros e limiares entre overfitting e underfitting de vários
