--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/zomato.jpg" alt="" /></a>
+											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/zomato.jpg" alt="" width="500" height="250" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Marketplace com o Streamlit</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
@@ -164,7 +164,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="image"><img src="images/ensaio_machine_learning.png" alt="" /></a>
+											<a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="image"><img src="images/ensaio_machine_learning.png" alt="" width="500" height="250" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Nesse projeto, foram explorados os principais conceitos do treinamento,
 											ajuste de parâmetros e limiares entre overfitting e underfitting de vários
