--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 											Sinta-se à vontade para entrar em contato através dos links no final da página.</p>										
 									</div>
 									<span class="image object">
-										<img src="images/Leonardo.jpg" alt="" height="600"/>
+										<img src="images/Leonardo.jpg" alt="" width="500" height="250" />
 									</span>
 								</section>
 
