--- a/index.html
+++ b/index.html
@@ -192,7 +192,25 @@
 												<ul class="actions">
 												<li><a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="button">Saiba Mais</a></li>
 											</ul>
-										</article>										
+										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/zomato.jpg" alt="" width="500" height="250" /></a>
+											<h3>Desenvolvimento de um Painel Gerencial para Marketplace com o Streamlit</h3>
+											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida.</p>
+											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>Jupyter Lab;</li>
+														<li>Terminal;</li>
+														<li>Streamlit;</li>
+														<li>Streamlit Cloud;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/leonardonassibfonseca/fome_zero" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
