--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/zomato.jpg" alt="" width="500" height="250" /></a>
-											<h3>Desenvolvimento de um Painel Gerencial para Marketplace com o Streamlit</h3>
-											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida.</p>
-											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
+											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/rossmann.jpg" alt="" width="500" height="250" /></a>
+											<h3>Processo de criação de um Projeto Completo de Ciência de Dados para uma empresa de medicamentos da Europa</h3>
+											<p>Uma empresa do setor de medicamentos da Europa precisava mensurar o valor de faturamento de suas lojas para as próximas 6 semanas. Para esta atividade, foram abordas todas as etapas que compõe um projeto completo de Ciência de Dados a fim de encontrar o valor mais otimizado, as etapas foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.
+											<p>Como resultado final deste projeto a empresa agora possui uma solução que permite acessar os valores mais otimizas e pessimistas para cada loja contida no dataset.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
-														<li>Jupyter Lab;</li>
+														<li>Jupyter Notebook;</li>
 														<li>Terminal;</li>
-														<li>Streamlit;</li>
-														<li>Streamlit Cloud;</li>
+														<li>Ambiente Virtual;</li>
+														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
