--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="image"><img src="images/ensaio_machine_learning.png" alt="" width="500" height="250" /></a>
+											<a href="https://github.com/leonardonassibfonseca/portifolio_projetos" class="image"><img src="images/ensaio_machine_learning.png" alt="" width="500" height="250" /></a>
 											<h3>Ensaio de Machine Learning</h3>
 											<p>Nesse projeto, foram explorados os principais conceitos do treinamento,
 											ajuste de parâmetros e limiares entre overfitting e underfitting de vários
@@ -208,7 +208,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/leonardonassibfonseca/fome_zero" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/leonardonassibfonseca/Projeto_Rossmann.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
