--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 									</header>
 									<!-- Content -->
 										<h2 id="content">Meu nome é Leonardo Nassib Fonseca</h2>
-										<p>Sou formado em Engenharia Elétrica e trabalho como Analista de Risco no mercado financeiro.</p>
-										<p>Atualmente, trabalho na análise e seleção de ativos para carteira de clientes de acordo
-											com o seu perfil de investidor e trabalho com projetos pessoas sobre Ciência de Dados,
-											para adquirir experiência na solução de problemas de negócio e domínio sobre as
+										<p>Sou graduado em Engenharia de Produção Mecânica e trabalho como Analista de PCP em uma industria metalmecânica.</p>
+										<p>Atualmente, sou responsável por otimizar processos produtivos, elaborar planos
+											de produção e monitorar os niveis de estoque dos materiais acabados, também tenho 
+											desenvolvidos projetos pessoas com dados públicos relacionado a Ciência de Dados,
+											a fim de adquirir experiência na solução de problemas de negócio e domínio sobre as
 											ferramentas de análise de dados.</p>
 											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de
 												Dados para melhorar a tomada de decisão da empresa, através da construção de
