--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 														<li>Jupyter Notebook;</li>
 														<li>Terminal;</li>
 														<li>Ambiente Virtual;</li>
+														<li>Ambiente em Nuvem;</li>
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
@@ -214,21 +215,24 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/health_insurance.git" class="image"><img src="images/health_insurance.JPG" alt="" width="500" height="250" /></a>
-											<h3>Processo de criação de um Projeto Completo de Ciência de Dados para uma empresa de medicamentos da Europa</h3>
-											<p>Uma empresa do setor de medicamentos da Europa precisava mensurar o valor de faturamento de suas lojas para as próximas 6 semanas. Para esta atividade, foram abordas todas as etapas que compõe um projeto completo de Ciência de Dados a fim de encontrar o valor mais otimizado, as etapas foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.
-											<p>Como resultado final deste projeto a empresa agora possui uma solução que permite acessar os valores mais otimizas e pessimistas para cada loja contida no dataset.</p>											
+											<h3>Implementar um modelo de machine learning para ranquear a propensão de um cliente aderir a um seguro de veículo além do seguro de saúde que já possui</h3>
+											<p>Uma seguradora que oferece seguro saúde aos seus clientes, precisa construir um modelo para prever se os segurados (clientes) do ano passado também terão interesse no seguro de veículo oferecedo pela empresa.</p>
+											<p>As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning,</p>
+											<p>Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
+											<p>Como resultado final deste projeto a empresa agora possui uma solução que permite ranquear os clientes em potencial para assim oferecer-los o seguro de veículo. Esta solução está implementada em nuvem e pode ser acessada via API.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
 														<li>Jupyter Notebook;</li>
 														<li>Terminal;</li>
+														<li>Google Script;</li>
 														<li>Ambiente Virtual;</li>
 														<li>Ambiente em Nuvem;</li>
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/leonardonassibfonseca/Projeto_Rossmann.git" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/leonardonassibfonseca/health_insurance.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
