--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/health_insurance.git" class="image"><img src="images/health_insurance.JPG" alt="" width="500" height="250" /></a>
-											<h3>Implementar um modelo de machine learning para ranquear a propensão de um cliente aderir a um seguro de veículo além do seguro de saúde que já possui</h3>
+											<h3>Implementar um modelo de Machine Learning para ranquear a propensão de um cliente aderir a um seguro de veículo</h3>
 											<p>Uma seguradora que oferece seguro saúde aos seus clientes, precisa construir um modelo para prever se os segurados (clientes) do ano passado também terão interesse no seguro de veículo oferecedo pela empresa.</p>
 											<p>As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning,</p>
 											<p>Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
