--- a/index.html
+++ b/index.html
@@ -134,11 +134,18 @@
 											onde eu abordei o problema desde a concepção do desafio de negócio até a
 											publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
 											Computing.</p>
-										<h2 id="content">3+ anos como Analista de Risco</h2>
-										<p>Estudo e seleção de ativos de baixo risco para clientes com perfil de investidor
-											conservador. Rotinas de atualização de relatórios e métricas para os "steakholder".</p>
-										<h2 id="content">2+ anos como monitor de Econometria</h2>
-											<p>Correção de provas, exercícios e monitorias ao vivo para tirar dúvidas dos alunos.</p>									
+										<h2 id="content">2+ anos como Analista de PCP</h2>
+										<p>Realizo programação de produção em máquinas de usinagem para atender a carteira de clientes de forma eficiente, 
+											utilizando técnicas de priorização no fluxo produtivo. Utilizo dados gerados nessas programações e na análise
+											da carteira de pedidos para validar argumentações com o time de produção e outras áreas. Isso inclui considerações
+											sobre movimentações de mão-de-obra, redimensionamento de famílias de produtos e solicitações de horas extras.
+											Além disso, certifico-me de que a carga máquina esteja em equilíbrio com as capacidades produtivas e a demanda.</p>
+										<h2 id="content">5+ anos como Analista de PCPM</h2>
+											<p>Responsável pela gestão dos materiais obsoletos em estoque entre eles: matérias primas (ROH), semi-acabados (HALB),
+												acabados (FERT) e materiais indiretos (FHMI, HAWA, HIBE e ERSA). Análise de possíveis rupturas de estoque de
+												matérias primas no curto, médio e longo prazo, dando suporte na tomada de decisão ao plano mestre de produção (MPS).
+												Implementação e manutenção dos indicadores: OTIF (On Time In Full), POTIF (Production On Time In Full),
+												SOTIF (Supplier On Time In Full), DoC (Days of Coverage). Direcionamentos de quais materiais estavam fora das políticas de estoque.</p>									
 										
 							<!-- Section -->
 								<section>
