--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/fome_zero" class="image"><img src="images/zomato.jpg" alt="" width="500" height="250" /></a>
+											<a href="https://leonardo-projetos-fome-zero.streamlit.app/" class="image"><img src="images/zomato.jpg" alt="" width="500" height="250" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Marketplace com o Streamlit</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
