--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 											Sinta-se à vontade para entrar em contato através dos links no final da página.</p>										
 									</div>
 									<span class="image object">
-										<img src="images/foto.jpeg" alt="" />
+										<img src="images/Foto_4_3.jpeg" alt="" />
 									</span>
 								</section>
 
