--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/taxi_trajectory.git" class="image"><img src="images/taxi.png" alt="" width="500" height="250" /></a>
-											<h3>Criar um modelo capaz de prever as coordenadas WGS84 do destino final com base nos dados disponíveis, melhorando assim a capacidade de despacho dos serviços de táxi</h3>
+											<h3>Criação de um modelo de Machine Learning capaz de prever as coordenadas WGS84 do destino final com base nos dados disponíveis, melhorando assim a capacidade de despacho dos serviços de táxi</h3>
 											<p>Para melhorar a eficiência dos sistemas eletrônicos de despacho de táxis é importante ser capaz de prever o destino final de um táxi enquanto este está em serviço. Se um despachante soubesse aproximadamente onde seus motoristas de táxi terminariam suas viagens atuais, ele seria capaz de identificar qual táxi atribuir a cada solicitação de coleta. As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
 											<p>Como resultado final deste projeto a empresa agora possui uma solução que permite, através do históricos das corridas, prever o destino final dos motoristas em serviço, atribuindo ao taxista mais próximos as solicitações de coleta.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
