--- a/index.html
+++ b/index.html
@@ -260,22 +260,22 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/taxi_trajectory.git" class="image"><img src="images/imagem_2.jpg" alt="" width="500" height="250" /></a>
-											<h3>Criação de um modelo de Machine Learning capaz de prever as coordenadas WGS84 do destino final com base nos dados disponíveis, melhorando assim a capacidade de despacho dos serviços de táxi</h3>
-											<p>Para melhorar a eficiência dos sistemas eletrônicos de despacho de táxis é importante ser capaz de prever o destino final de um táxi enquanto este está em serviço. Se um despachante soubesse aproximadamente onde seus motoristas de táxi terminariam suas viagens atuais, ele seria capaz de identificar qual táxi atribuir a cada solicitação de coleta. As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
-											<p>Como resultado final deste projeto a empresa agora possui uma solução que permite, através do históricos das corridas, prever o destino final dos motoristas em serviço, atribuindo ao taxista mais próximos as solicitações de coleta.</p>											
+											<a href="https://github.com/leonardonassibfonseca/programa_de_fidelidade.git" class="image"><img src="images/imagem_2.jpg" alt="" width="500" height="250" /></a>
+											<h3>Determinar atraves de clusterização quem seriam os clientes elegíveis para participar do programa Insider (grupo com os melhores clientes).</h3>
+											<p>A identificação desses clientes é crucial, pois o time de marketing busca direcionar ações personalizadas e exclusivas a este grupo, visando aumentar o faturamento e a frequência de compra. As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
+											<p>Com a definição dos clusters, foi possível identificar o cluster mais relevante em termos de faturamento para a empresa, denominado de clientes Insiders. Além disso, conseguimos listar possíveis ações para os demais clusters, visando sua possível integração ao programa de Insiders.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
 														<li>Jupyter Notebook;</li>
 														<li>Terminal;</li>
-														<li>Google Script;</li>
+														<li>Amazon Web Services;</li>
 														<li>Ambiente Virtual;</li>														
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/leonardonassibfonseca/taxi_trajectory.git" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/leonardonassibfonseca/programa_de_fidelidade.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
