--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/programa_de_fidelidade.git" class="image"><img src="images/imagem_2.jpg" alt="" width="500" height="250" /></a>
-											<h3>Determinar atraves de clusterização quem seriam os clientes elegíveis para participar do programa Insider (grupo com os melhores clientes).</h3>
-											<p>A identificação desses clientes é crucial, pois o time de marketing busca direcionar ações personalizadas e exclusivas a este grupo, visando aumentar o faturamento e a frequência de compra. As etapas para a resolução deste problema foram: Definição do Problema, Coleta de Dados, Limpeza dos Dados, Análise Exploratória (EDA), Modelagem, Treinamento dos Algoritmos de Machine Learning, Avaliação dos Algoritmos e Implementação em Produção. Os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio foram cruciais para o desenvolvimento e posterior proposta da solução.</p>
+											<h3>Determinar quem seriam os clientes elegíveis para participar do programa Insider (grupo com os melhores clientes).</h3>
+											<p>A identificação desses clientes é crucial, pois o time de marketing busca direcionar ações personalizadas e exclusivas a este grupo, visando aumentar o faturamento e a frequência de compra.</p>
 											<p>Com a definição dos clusters, foi possível identificar o cluster mais relevante em termos de faturamento para a empresa, denominado de clientes Insiders. Além disso, conseguimos listar possíveis ações para os demais clusters, visando sua possível integração ao programa de Insiders.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
