--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
 														<li>Jupyter Notebook;</li>
 														<li>Terminal;</li>
 														<li>Amazon Web Services;</li>
-														<li>Ambiente Virtual;</li>														
+														<li>Ambiente Virtual;</li>
+														<li>Metabase;</li>
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
