--- a/index.html
+++ b/index.html
@@ -279,6 +279,25 @@
 												<li><a href="https://github.com/leonardonassibfonseca/programa_de_fidelidade.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/elasticidade_de_preco.git" class="image"><img src="images/Cedula_esticada.jpg" alt="" width="500" height="250" /></a>
+											<h3>Determinar quem seriam os clientes elegíveis para participar do programa Insider (grupo com os melhores clientes).</h3>
+											<p>A identificação desses clientes é crucial, pois o time de marketing busca direcionar ações personalizadas e exclusivas a este grupo, visando aumentar o faturamento e a frequência de compra.</p>
+											<p>Com a definição dos clusters, foi possível identificar o cluster mais relevante em termos de faturamento para a empresa, denominado de clientes Insiders. Além disso, conseguimos listar possíveis ações para os demais clusters, visando sua possível integração ao programa de Insiders.</p>											
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>Jupyter Notebook;</li>
+														<li>Terminal;</li>
+														<li>Streamlit Cloud;</li>
+														<li>Ambiente Virtual;</li>														
+														<li>Git;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/leonardonassibfonseca/elasticidade_de_preco.git" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
