--- a/index.html
+++ b/index.html
@@ -281,9 +281,11 @@
 										</article>
 										<article>
 											<a href="https://github.com/leonardonassibfonseca/elasticidade_de_preco.git" class="image"><img src="images/Cedula_esticada.jpg" alt="" width="500" height="250" /></a>
-											<h3>Determinar quem seriam os clientes elegíveis para participar do programa Insider (grupo com os melhores clientes).</h3>
-											<p>A identificação desses clientes é crucial, pois o time de marketing busca direcionar ações personalizadas e exclusivas a este grupo, visando aumentar o faturamento e a frequência de compra.</p>
-											<p>Com a definição dos clusters, foi possível identificar o cluster mais relevante em termos de faturamento para a empresa, denominado de clientes Insiders. Além disso, conseguimos listar possíveis ações para os demais clusters, visando sua possível integração ao programa de Insiders.</p>											
+											<h3>Compreender a sensibilidade da demanda por um produto ou serviço às mudanças de preço, através da análise de elasticidade-preço da demanda.</h3>
+											<p>O estudo visa compreender a dinâmica entre oferta e demanda em um mercado, sendo essenciais para a economia.</p>
+											<p>A lei da demanda estabelece que a demanda por um produto diminui com o aumento do preço e vice-versa.</p>
+											<p>O objetivo é entender como as mudanças nos preços afetam a demanda e, consequentemente, as estratégias de produção e precificação.</p>
+											<p>Isso envolve calcular a elasticidade-preço da demanda para determinar se a demanda é elástica ou inelástica e usar esses insights para definir o preço ideal que maximize as receitas ou lucros.</p>											
 												<h4>As ferramentas utilizadas foram:</h4>
 													<ul>
 														<li>Python;</li>
