--- a/index.html
+++ b/index.html
@@ -297,6 +297,24 @@
 												<li><a href="https://github.com/leonardonassibfonseca/elasticidade_de_preco.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/qualidade_concreto.git" class="image"><img src="images/ensaio_resistencia.JPG" alt="" width="500" height="250" /></a>
+											<h3>Uma construtora gostaria de medir a resistência do concreto baseando-se nas características disponíveis, ela depende dessa questão para construir nossos projetos e reduzir os custos envolvidos.</h3>
+											<p>Este projeto visa construir um modelo para prever a dureza do concreto para que o time de engenheiros possa utilizar essa solução para os novos projetos e consequentemente reduzindo os custos envolvidos.</p>
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>VScode;</li>
+														<li>Terminal;</li>
+														<li>Render Cloud;</li>
+														<li>Ambiente Virtual;</li>														
+														<li>Git;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/leonardonassibfonseca/qualidade_concreto.git" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
