--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
 														<li>VScode;</li>
 														<li>Terminal;</li>
 														<li>Render Cloud;</li>
-														<li>Ambiente Virtual;</li>														
+														<li>Ambiente Virtual;</li>
+														<li>Google Cloud Platform;</li>
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
