--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 04/2024</li>
 												<li><a href="https://github.com/leonardonassibfonseca/qualidade_concreto.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
