--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 09/2023</li>
 												<li><a href="https://github.com/leonardonassibfonseca/fome_zero" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -198,6 +199,7 @@
 														<li>Métricas de performance: Silhouette Score.</li>														
 													</ul>											
 												<ul class="actions">
+												<li>Conclusão: 10/2023</li>
 												<li><a href="https://github.com/leonardonassibfonseca/ensaio_machine_learning" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -217,6 +219,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 11/2023</li>
 												<li><a href="https://github.com/leonardonassibfonseca/Projeto_Rossmann.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -237,6 +240,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 12/2023</li>
 												<li><a href="https://github.com/leonardonassibfonseca/health_insurance.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -256,6 +260,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 01/2024</li>
 												<li><a href="https://github.com/leonardonassibfonseca/taxi_trajectory.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
@@ -276,6 +281,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 02/2024</li>
 												<li><a href="https://github.com/leonardonassibfonseca/programa_de_fidelidade.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
