--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 														<li>Github.</li>
 													</ul>
 											<ul class="actions">
+												<li>Conclusão: 01/2024</li>
 												<li><a href="https://github.com/leonardonassibfonseca/elasticidade_de_preco.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
