--- a/index.html
+++ b/index.html
@@ -324,6 +324,26 @@
 												<li><a href="https://github.com/leonardonassibfonseca/qualidade_concreto.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/formulario_medico.git" class="image"><img src="images/imagem_projeto.JPG" alt="" width="500" height="250" /></a>
+											<h3>A classificação inadequada ou a falta de dados precisos sobre Síndrome Respiratória Aguda Grave (SRAG) pode resultar em decisões de saúde pública ineficazes, subnotificação de casos, e dificuldades na identificação de surtos.</h3>
+											<p>Criar um sistema robusto de notificação e monitoramento que permita a coleta sistemática e padronizada de dados de saúde pública. Esse sistema visa facilitar a análise de dados epidemiológicos para apoiar a tomada de decisões em saúde pública, a detecção precoce de surtos e a implementação de medidas preventivas e de controle.</p>
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>VScode;</li>
+														<li>Terminal;</li>
+														<li>Render Cloud;</li>
+														<li>Ambiente Virtual;</li>
+														<li>Google Cloud Platform;</li>
+														<li>Git;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li>Conclusão: 06/2024</li>
+												<li><a href="https://github.com/leonardonassibfonseca/formulario_medico.git" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
