--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://github.com/leonardonassibfonseca/formulario_medico.git" class="image"><img src="images/imagem_projeto.JPG" alt="" width="500" height="250" /></a>
+											<a href="https://github.com/leonardonassibfonseca/formulario_medico.git" class="image"><img src="images/imagem_projeto.jpg" alt="" width="500" height="250" /></a>
 											<h3>A classificação inadequada ou a falta de dados precisos sobre Síndrome Respiratória Aguda Grave (SRAG) pode resultar em decisões de saúde pública ineficazes, subnotificação de casos, e dificuldades na identificação de surtos.</h3>
 											<p>Criar um sistema robusto de notificação e monitoramento que permita a coleta sistemática e padronizada de dados de saúde pública. Esse sistema visa facilitar a análise de dados epidemiológicos para apoiar a tomada de decisões em saúde pública, a detecção precoce de surtos e a implementação de medidas preventivas e de controle.</p>
 												<h4>As ferramentas utilizadas foram:</h4>
