--- a/index.html
+++ b/index.html
@@ -333,9 +333,10 @@
 														<li>Python;</li>
 														<li>VScode;</li>
 														<li>Terminal;</li>
+														<li>Streamlit;</li>
 														<li>Render Cloud;</li>
 														<li>Ambiente Virtual;</li>
-														<li>Google Cloud Platform;</li>
+														<li>AWS;</li>
 														<li>Git;</li>
 														<li>Github.</li>
 													</ul>
