--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 									<p>Sinta-se à vontade para entrar em contato:</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">fonseca3@gmail.com</a></li>
-										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/fonseca3">LinkedIn</a></li>
+										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/leonardonassibfonseca">LinkedIn</a></li>
 									</ul>
 								</section>
 						</div>
