--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 											<div class="content">
 												<h3>Linguagens de Programação</h3>
 												<ul>
-													<li>Python com foco em Análise de Dados;</li>
-													<li>Pensamento Estratégico;</li>
-													<li>SQL Language;</li>
-													<li>Conceitos de ETL.</li>													
+													<li>Python (Pandas, NumPy, Scikit-learn, Scipy);</li>
+													<li>Apache Spark;</li>													
+													<li>Conceitos de ETL;</li>													
+													<li>SQL (Consultas, modelagem de dados, otimização de queries);</li>
+													<li>VBA (Automação de processos no Excel).</li>
 												</ul>
 											</div>
 										</article>
@@ -88,13 +89,15 @@
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade);</li>
+													<li>Estatística descritiva;</li>
+													<li>Estatística probabilística;</li>
+													<li>Estatística inferencial;</li>
 													<li>Algoritmos de regressão, classificação e clusterização;</li>
-													<li>Métricas de Performance (RMSE, MSE, MAE, MAPE, Confusion Matrix,
-													Precision, Recall, ROC Curve, Silhouette Score e R2);</li>																				
-													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Confusion Matrix,
-														Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index);</li>
-													<li>Pacotes de Machine Learning: Sklearn.</li>
+													<li>Métricas de Performance (RMSE, MSE, MAE, MAPE, R2, Confusion Matrix,
+													Precision, Recall, ROC Curve, AUC, Curva lift, Silhouette Score);</li>																				
+													<li>Pacotes de Machine Learning: Scikit-learn, Scipy;</li>
+													<li>Modelos supervisionados e não supervisionados;</li>
+													<li>Validação cruzada e otimização de hiperparâmetros.</li>
 												</ul>
 											</div>
 										</article>
@@ -103,8 +106,9 @@
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<ul>
-													<li>Matplotlib e Seaborn;</li>
-													<li>Streamlit.</li>
+													<li>Power BI (Dashboards interativos, DAX, Power Query);</li>
+													<li>Matplotlib, Seaborn, Plotly;</li>
+													<li>Streamlit (para criação de aplicativos de dados).</li>
 												</ul>
 											</div>
 										</article>
@@ -113,11 +117,13 @@
 											<div class="content">
 												<h3>Engenharia de Software</h3>
 												<ul>
-													<li>Github;</li>
-													<li>SQLite3 Database;</li>
+													<li>Git/GitHub (Controle de versão, colaboração);</li>
+													<li>Estruturação de pipelines de dados;</li>
 													<li>WSL;</li>
 													<li>Linux;</li>
-													<li>Streamlit Cloud.</li>
+													<li>Automação de processos com Python e VBA;</li>
+													<li>Streamlit Cloud;</li>
+													<li>APIs.</li>
 												</ul>
 											</div>
 										</article>
