--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@
 									</header>
 									<!-- Content -->
 										<h2 id="content">Meu nome é Leonardo Nassib Fonseca</h2>
-										<p>Sou graduado em Engenharia de Produção Mecânica e trabalho como Analista de PCP em uma industria metalmecânica.</p>
-										<p>Atualmente, sou responsável por otimizar processos produtivos, elaborar planos
-											de produção e monitorar os niveis de estoque dos materiais acabados, também tenho 
-											desenvolvidos projetos pessoas com dados públicos relacionado a Ciência de Dados,
-											a fim de adquirir experiência na solução de problemas de negócio e domínio sobre as
-											ferramentas de análise de dados.</p>
+										<p>Engenheiro de Produção em transição para Ciência de Dados.</p>
+										<p>Com vasta experiência em planejamento, análise de dados e otimização de processos.
+											Tenho conhecimento em Python, SQL, Cloud Computing e Machine Learning, além de 
+											um forte foco em dados para geração de insights e soluções para problemas reais.</p>
 											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de
 												Dados para melhorar a tomada de decisão da empresa, através da construção de
 												soluções usando dados.</p>
