--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 									</header>
 									<!-- Content -->
 										<h2 id="content">Meu nome é Leonardo Nassib Fonseca</h2>
-										<p>Engenheiro de Produção em transição para Ciência de Dados.</p>
-										<p>Com vasta experiência em planejamento, análise de dados e otimização de processos.
-											Tenho conhecimento em Python, SQL, Cloud Computing e Machine Learning, além de 
-											um forte foco em dados para geração de insights e soluções para problemas reais.</p>
-											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de
-												Dados para melhorar a tomada de decisão da empresa, através da construção de
-												soluções usando dados.</p>
+										<p>Engenheiro de Produção em transição para Ciência de Dados.<br/>
+										Com vasta experiência em planejamento, análise de dados e otimização de processos.
+										Tenho conhecimento em Python, SQL, Cloud Computing e Machine Learning, além de 
+										um forte foco em dados para geração de insights e soluções para problemas reais.<br/>
+										Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de
+										Dados para melhorar a tomada de decisão da empresa, através da construção de
+										soluções usando dados.</p>
 								</section>
 								<!-- Section -->
 								<section>
