--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
 									<header class="main">
 										<h1>Experiências Profissionais</h1>
 									</header>
-										<h2 id="content">4+ Projetos completos de Ciência de Dados</h2>
-										<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios
-											reais das empresas, utilizando dados públicos de competições de Ciência de Dados,
-											onde eu abordei o problema desde a concepção do desafio de negócio até a
-											publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud
-											Computing.</p>
+										<h2 id="content">9+ Projetos completos de Ciência de Dados</h2>
+										<p>Desenvolvi soluções baseadas em dados para desafios empresariais reais, desde a concepção do problema até a implementação em produção, 
+											utilizando Python, Machine Learning e Cloud Computing. Criei um painel gerencial para marketplace, um modelo preditivo para previsão
+											de faturamento no setor farmacêutico e um sistema para ranqueamento de clientes em seguros. Desenvolvi algoritmos para prever destinos
+											de táxi, analisar elasticidade-preço da demanda e segmentar clientes para programas de fidelização. Além disso, implementei modelos
+											para detecção de fraudes financeiras, previsão da resistência do concreto e um sistema de monitoramento de SRAG para melhorar a
+											notificação de casos e decisões em saúde pública.</br>
+											Meus projetos demonstram análise estratégica de dados, otimização de modelos de Machine Learning e implementação de soluções escaláveis para tomada de decisão.</p>
 										<h2 id="content">2+ anos como Analista de PCP</h2>
 										<p>Realizo programação de produção em máquinas de usinagem para atender a carteira de clientes de forma eficiente, 
 											utilizando técnicas de priorização no fluxo produtivo. Utilizo dados gerados nessas programações e na análise
