--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>										
 									</ul>
 								</header>
-
+							<!-- Banner -->
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
