--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>										
 									</ul>
 								</header>
+							
 							<!-- Banner -->
-							<!-- Banner -->
+							<section id="banner">
 								<section id="banner">
 									<div class="content">
 										<header>
