--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 
 								<!-- Content -->
 								<section>
+																	</section>
+
+								<!-- Content -->
+								<section>
 									<header class="main">
 										<h1>Sobre mim</h1>
 									</header>
