--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<li>Estatística descritiva;</li>
-													<li>Estatística probabilística;</li>
-													<li>Estatística inferencial;</li>
+													<li>Estatística descritiva, probabilística e inferencial;</li>
 													<li>Algoritmos de regressão, classificação e clusterização;</li>
 													<li>Métricas de Performance (RMSE, MSE, MAE, MAPE, R2, Confusion Matrix,
 													Precision, Recall, ROC Curve, AUC, Curva lift, Silhouette Score);</li>																				
@@ -118,6 +116,7 @@
 												<h3>Engenharia de Software</h3>
 												<ul>
 													<li>Git/GitHub (Controle de versão, colaboração);</li>
+													<li>Databricks;</li>
 													<li>Estruturação de pipelines de dados;</li>
 													<li>WSL;</li>
 													<li>Linux;</li>
