--- a/index.html
+++ b/index.html
@@ -370,6 +370,24 @@
 												<li><a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="image"><img src="images/imagem_projeto_fraude.jpg" alt="" width="500" height="250" /></a>
+											<h3>A detecção inadequada ou a falta de dados precisos sobre transações fraudulentas pode levar a prejuízos financeiros significativos, subnotificação ou supernotificação de fraudes, além de dificultar o monitoramento eficaz de comportamentos fraudulentos.</h3>
+											<p>Criar um sistema robusto de detecção de fraudes que permita a identificação precisa de transações fraudulentas em tempo real. Este sistema visa reduzir a ocorrência de fraudes, minimizar os custos com investigações desnecessárias, e melhorar a alocação de recursos para a análise de transações suspeitas.</p>
+												<h4>As ferramentas utilizadas foram:</h4>
+													<ul>
+														<li>Python;</li>
+														<li>VScode;</li>
+														<li>Terminal;</li>
+														<li>Ambiente Virtual;</li>
+														<li>Git;</li>
+														<li>Github.</li>
+													</ul>
+											<ul class="actions">
+												<li>Conclusão: 01/2025</li>
+												<li><a href="https://github.com/leonardonassibfonseca/deteccao_fraude.git" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 								<!-- Section -->
@@ -396,3 +414,4 @@
 
 	</body>
 </html>
+
